deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: chatbot
 labels:
   app: chatbot
spec:
 replicas: 1
 selector:
   matchLabels:
     app: chatbot
 template:
   metadata:
     labels:
       app: chatbot
   spec:
     containers:
     - name: chatbot
       image: 096198301477.dkr.ecr.us-west-2.amazonaws.com/chatbot:rag-v1
         #image: falcon-lctx:0.9.2
       command: ["/bin/sh", "-c"]
       args: ["while true; do sleep 30; done"]
       imagePullPolicy: IfNotPresent
       resources:
         limits:
           nvidia.com/gpu: 4
       ports:
       - containerPort: 7860
       volumeMounts:
         - mountPath: /dev/shm
           name: dshm
     volumes:
     - emptyDir:
         sizeLimit: 1Gi
         medium: Memory
       name: dshm
