service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-svc
spec:
  selector:
    app: chatbot 
  ports:
    - protocol: TCP
      port: 7860
      targetPort: 7860
  type: ClusterIP
